# midirc

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: frontend.rs  lib.rs  main.rs  midi.rs
src-tauri/src/midi/: commands.rs  message.rs  playback.rs  recorder.rs  smf.rs
src/components/: MidiInputSelector.vue  MidiOutputSelector.vue  RootLayout.vue  ViewNavigation.vue
src/components/common/: Button.vue  IconButton.vue  Select.vue
src/components/recorder/: PlaybackControls.vue  RecorderControls.vue  RecorderView.vue  Recording.vue  RecordingList.vue  Track.vue  TrackList.vue
src/components/virtual-keyboard/: BlackKey.vue  VirtualKeyboard.vue  WhiteKey.vue
src/helpers/: duration-helper.ts
src/hooks/: use-midi.ts  use-mouse.ts  use-navigation.ts  use-playback.ts  use-recorder.ts
src/tauri/: midi-commands.ts  playback-commands.ts  recorder-commands.ts  window.ts
src/types/: midi-message.ts  midi.ts  playback.ts  recorder.ts
src/views/: MidiMonitor.vue  MidiRecorder.vue
